# deeplearning-model-serving

./: .gitignore  README.MD
TensorRT_Serving/1_make_pb_tfsavedmodel/: make_pb.md
TensorRT_Serving/1_make_pb_tfsavedmodel/demo/: convert_h5_to_pb.py  tf_checkpoint_to_savedmodel.py
TensorRT_Serving/2_make_pb_tfgraphdef/: make_pb.md
TensorRT_Serving/2_make_pb_tfgraphdef/demo/: get_graphdef_model.py  get_input_output.py
TensorRT_Serving/2_make_pb_tfgraphdef/demo/utils/: saved_model_cli.py  tf_freeze_graph.py
TensorRT_Serving/3_mount/: mount_pb.md
TensorRT_Serving/3_mount/demo/: docker-compose.yml
TensorRT_Serving/3_mount/demo/trt_gpu_models/: entrypoint.sh
TensorRT_Serving/3_mount/demo/trt_gpu_models/cardiac_seg/: config.pbtxt
TensorRT_Serving/3_mount/demo/trt_gpu_models/cardiac_seg/1/model.savedmodel/: saved_model.pb
TensorRT_Serving/3_mount/demo/trt_gpu_models/cardiac_seg/1/model.savedmodel/variables/: variables.index
TensorRT_Serving/3_mount/demo/trt_gpu_models/detector_3d/: config.pbtxt
TensorRT_Serving/4_python_check/: pb_python_check.md
TensorRT_Serving/4_python_check/demo/: simple_client.py
Tensorflow_Serving_1.x/1_make_pb/: make_pb.md
Tensorflow_Serving_1.x/1_make_pb/demo/: keras_mode_trainsfer_demo.py
Tensorflow_Serving_1.x/1_make_pb/demo/utils/: gpu_allocation.py  server_model_converter.py
Tensorflow_Serving_1.x/2_mount/: mount_pb.md
Tensorflow_Serving_1.x/2_mount/demo/: docker-compose.yml  tfserving_all.yml  tfserving_gpu.yml
Tensorflow_Serving_1.x/2_mount/demo/cpu_models/: README  entrypoint.sh  tf_cpu_log  xray_models.conf
Tensorflow_Serving_1.x/2_mount/demo/gpu_models/: README  entrypoint.sh  gpu_models.conf  tf_gpu_log
Tensorflow_Serving_1.x/2_mount/demo/gpu_models/detector_3d/1/: saved_model.pb
Tensorflow_Serving_1.x/2_mount/demo/gpu_models/detector_3d/1/variables/: variables.index
Tensorflow_Serving_1.x/3_python_check/: pb_python_check.md
Tensorflow_Serving_1.x/3_python_check/demo/: pb_info_get.py  serving_test.py
Tensorflow_Serving_1.x/4_cpp_check/: pb_cpp_check.md
Tensorflow_Serving_1.x/4_cpp_check/demo/: CMakeLists.txt
Tensorflow_Serving_1.x/4_cpp_check/demo/ServingTest/: CMakeLists.txt  ServingTest.cpp
Tensorflow_Serving_1.x/4_cpp_check/demo/tensorflowServingProto/: CMakeLists.txt
Tensorflow_Serving_1.x/4_cpp_check/demo/tensorflowServingProto/inc/: predict.grpc.pb.h  prediction_service.grpc.pb.h
Tensorflow_Serving_1.x/4_cpp_check/demo/tensorflowServingProto/src/: prediction_service.grpc.pb.cc
